# enedis-tic-lib

./: CMakeLists.txt  Makefile
include/enedisTIC/: DatasetFactory.h  FrameProcessor.h  libEnedisTIC_global.h
include/enedisTIC/datasets/: GenericDataset.h
include/enedisTIC/datasets/historical/: BBRHCJB.h  BBRHCJR.h  BBRHPJW.h  DEMAIN.h  IINST2.h  IINST3.h  IMAX1.h  IMAX2.h  ISOUSC.h  OPTARIF.h  PAPP.h  PMAX.h  PPOT.h  PTEC.h
include/enedisTIC/datasets/standard/: ADSC.h  EASD01.h  EASD02.h  EASF01.h  EASF03.h  EASF04.h  EASF07.h  EASF10.h  IRMS2.h  MSG1.h  NGTF.h  PCOUP.h  PJOURF_1.h  PPOINTE.h  RELAIS.h  SINSTS2.h  SINSTS3.h  SMAXSN1.h  SMAXSN1_1.h  SMAXSN2.h  SMAXSN2_1.h  SMAXSN3.h  SMAXSN3_1.h  SMAXSN_1.h  UMOY2.h  URMS2.h  URMS3.h  VTIC.h
include/enedisTIC/transport/: Frame.h
lib/: CMakeLists.txt
lib/include/enedisTIC/: FrameBuffer.h  datasets.h  utils.h
lib/include/enedisTIC/datasets/: AbstractDataset.h
lib/include/enedisTIC/datasets/historical/: ADCO.h  BBRHCJW.h  BBRHPJB.h  BBRHPJR.h  HHPHC.h  IINST1.h  IMAX3.h  MOTDETAT.h
lib/include/enedisTIC/datasets/standard/: CCASN.h  CCASN_1.h  DATE.h  EASD03.h  EASD04.h  EASF02.h  EASF05.h  EASF06.h  EASF08.h  EASF09.h  EAST.h  IRMS1.h  IRMS3.h  LTARF.h  MSG2.h  NJOURF.h  NJOURF_1.h  NTARF.h  PREF.h  PRM.h  SINSTS.h  SINSTS1.h  SMAXSN.h  STGE.h  UMOY1.h  UMOY3.h  URMS1.h
lib/src/enedisTIC/: FrameBuffer.cpp  FrameProcessor.cpp  utils.cpp
lib/src/enedisTIC/datasets/: 000-README.md  AbstractDataset.cpp
lib/src/enedisTIC/datasets/historical/: ADCO.cpp  BBRHCJB.cpp  BBRHCJR.cpp  BBRHCJW.cpp  BBRHPJB.cpp  BBRHPJR.cpp  BBRHPJW.cpp  DEMAIN.cpp  HHPHC.cpp  IINST1.cpp  IINST2.cpp  IINST3.cpp  IMAX1.cpp  IMAX2.cpp  IMAX3.cpp  ISOUSC.cpp  MOTDETAT.cpp  OPTARIF.cpp  PAPP.cpp  PMAX.cpp  PPOT.cpp  PTEC.cpp
lib/src/enedisTIC/datasets/standard/: ADSC.cpp  CCASN.cpp  CCASN_1.cpp  DATE.cpp  EASD01.cpp  EASD02.cpp  EASD03.cpp  EASD04.cpp  EASF01.cpp  EASF02.cpp  EASF03.cpp  EASF04.cpp  EASF05.cpp  EASF06.cpp  EASF07.cpp  EASF08.cpp  EASF09.cpp  EASF10.cpp  EAST.cpp  IRMS1.cpp  IRMS2.cpp  IRMS3.cpp  LTARF.cpp  MSG1.cpp  MSG2.cpp  NGTF.cpp  NJOURF.cpp  NJOURF_1.cpp  NTARF.cpp  PCOUP.cpp  PJOURF_1.cpp  PPOINTE.cpp  PREF.cpp  PRM.cpp  RELAIS.cpp  SINSTS.cpp  SINSTS1.cpp  SINSTS2.cpp  SINSTS3.cpp  SMAXSN.cpp  (+15 more)
lib/src/enedisTIC/transport/: Frame.cpp
src/enedisTIC/: DatasetFactory.cpp  FrameBuffer.cpp  utils.cpp
src/enedisTIC/datasets/: GenericDataset.cpp
src/enedisTIC/datasets/historical/: BBRHCJB.cpp  BBRHCJR.cpp  BBRHCJW.cpp  BBRHPJB.cpp  BBRHPJR.cpp  BBRHPJW.cpp  IINST3.cpp  IMAX1.cpp  IMAX3.cpp  MOTDETAT.cpp  OPTARIF.cpp  PAPP.cpp  PMAX.cpp  PTEC.cpp
src/enedisTIC/datasets/standard/: CCASN.cpp  CCASN_1.cpp  EASD01.cpp  EASD02.cpp  EASF01.cpp  EASF03.cpp  EASF04.cpp  EASF06.cpp  EASF07.cpp  EASF08.cpp  EASF09.cpp  EASF10.cpp  EAST.cpp  LTARF.cpp  NJOURF_1.cpp  PCOUP.cpp  SINSTS1.cpp  SINSTS2.cpp  SMAXSN1_1.cpp  SMAXSN2_1.cpp  SMAXSN3_1.cpp  SMAXSN_1.cpp  UMOY1.cpp  UMOY2.cpp  UMOY3.cpp
src/enedisTIC/transport/: Frame.cpp
